--- a/phpDir/src/project_1/style.css
+++ b/phpDir/src/project_1/style.css
@@ -1,9 +1,46 @@
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
-  background-color: #ffcfcf;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #333;
+  background-color: #ffffff;
+  padding: 20px;
 }
 h1 {
-  text-align: center;
+  margin-bottom: 50px;
+}
+form {
+  display: flex;
+  align-items: center;
+}
+#mass {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-top: 10px;
+  background-color: #e7e7e7;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #3e8e41;
+}
+section {
+  height: 20vh;
 }
