--- a/phpDir/src/project_1/style.css
+++ b/phpDir/src/project_1/style.css
@@ -1,46 +1,120 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: #333;
-  background-color: #ffffff;
-  padding: 20px;
-}
-h1 {
-  margin-bottom: 50px;
-}
-form {
   display: flex;
   align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 0 10px;
+  background: #9200b0;
 }
-#mass {
-  display: flex;
-  flex-direction: column;
+::selection {
+  color: #fff;
+  background: #9200b0;
 }
-
-input {
-  padding: 10px;
-  font-size: 16px;
-  border: none;
+.container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 5px;
+}
+.wrapper {
+  width: 300px;
+  padding: 30px;
+  border-radius: 7px;
+  background: #fff;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+}
+.wrapper header {
+  font-size: 28px;
+  font-weight: 500;
+  text-align: center;
+}
+.wrapper form {
+  margin: 40px 0 20px 0;
+}
+form :where(input, select, button) {
+  width: 100%;
+  outline: none;
   border-radius: 5px;
-  margin-right: 10px;
-  margin-top: 10px;
-  background-color: #e7e7e7;
+  border: none;
+}
+form p {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+form input {
+  height: 50px;
+  font-size: 17px;
+  padding: 0 15px;
+  border: 1px solid #999;
+}
+form input:focus {
+  padding: 0 14px;
+  border: 2px solid #675afe;
+}
+form .drop-list {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+.drop-list .select-box {
+  display: flex;
+  width: 115px;
+  height: 105px;
+  align-items: center;
+  border-radius: 5px;
+  justify-content: center;
+  border: 1px solid rgb(21, 232, 214);
+}
+.select-box select {
+  width: auto;
+  font-size: 16px;
+  background: none;
+  margin: 0 -5px 0 5px;
+}
+.select-box select::-webkit-scrollbar {
+  width: 8px;
+}
+.select-box select::-webkit-scrollbar-track {
+  background: rgb(188, 5, 5);
+}
+.select-box select::-webkit-scrollbar-thumb {
+  background: rgb(225, 11, 11);
+  border-radius: 8px;
+  border-right: 2px solid #ffffff;
 }
 
-input[type="submit"] {
-  background-color: #4caf50;
-  color: white;
+.drop-list .icon {
   cursor: pointer;
+  margin-top: 30px;
+  font-size: 22px;
+}
+form .exchange-rate {
+  font-size: 17px;
+  margin: 20px 0 30px;
+}
+form button {
+  height: 52px;
+  color: #fff;
+  font-size: 17px;
+  cursor: pointer;
+  background: #9200b0;
+  transition: 0.3s ease;
+}
+form button:hover {
+  background: #b501da;
 }
 
-input[type="submit"]:hover {
-  background-color: #3e8e41;
-}
-section {
-  height: 20vh;
+@media only screen and (min-width: 900px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+  }
 }
